--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,42 @@
 }
 
 /* reset */
+
+main{
+    width: 100%;
+    height: 100vh;
+
+    padding-top: 30px;
+    
+    background-color: black;
+}
+
+main .container{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    
+
+    border: 2px solid white;
+}
+
+
+
+
+/* inizio navbar sottostante */
+
+nav{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+
+    width: 100%;
+    height: 100px;
+    /* test */
+    padding-bottom: 8px;
+    background-color: #222222;
+    color: white;
+
+}
+
