--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,91 @@ main{
     width: 100%;
     height: 100vh;
 
-    padding-top: 30px;
-    
+    padding-top: 60px;
+
     background-color: black;
 }
 
+main .view{
+    display: flex;
+    justify-content: flex-end;
+    gap: 5px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+
+    padding: 3px 2px;
+
+    
+    color: white;
+}
+
+.speaker-view, .enlarge{
+
+    height: 35px;
+    background-color: gray;
+
+}
+
+main .view .speaker-view .material-icons{
+    padding-top: 5px;
+
+}
+
+.speaker{
+    display: inline-block;
+    height: 100%;
+    text-align: center;
+    line-height: 12px;
+}
+
+.enlarge{
+    padding: 0px 5px;
+    padding-top: 10px;
+    border-radius: 5px;
+}
+
+
+
+/* inizio container immagini */
+
 main .container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 3px;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     
 
-    border: 2px solid white;
+    /* border: 2px solid white; */
+}
+
+main .container .users{
+    position: relative;
+    width: calc(100% / 7 - 3px * 7 / 6);
+
+    color: white;
+
+    /* border: 1px solid white; */
+    /* test */
+}
+
+.users img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.users .name{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    background-color: rgba(0, 0, 0, 0.3);
+
+
 }
 
 
