--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,20 @@
 
 /* reset */
 
+nav{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+
+    width: 100%;
+    height: 60px;
+    /* test */
+    /* padding-bottom: 8px; */
+    background-color: #222222;
+    color: white;
+
+}
 
 .view{
     display: flex;
@@ -15,7 +29,7 @@
     top: 0;
     left: 0;
     
-    padding: 3px 2px;
+    padding: 10px 10px;
     
     
     color: white;
@@ -56,7 +70,7 @@ main{
 width: 100%;
     height: 100vh;
 
-    padding-top: 60px;
+    padding-top: 70px;
     padding-bottom: 100px;
 
     overflow-y: auto;
@@ -120,26 +134,67 @@ main .container .users{
 
 /* inizio navbar sottostante */
 
-nav{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
 
-    width: 100%;
-    height: 50px;
-    /* test */
-    /* padding-bottom: 8px; */
-    background-color: #222222;
-    color: white;
-
-}
-
-nav .toolbar{
+.toolbar{
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 10px;
 
 }
+
+
+.icons{
+    display: inline-block;
+    text-align: center;
+    padding-right: 5px;
+
+}
+
+.icons i{
+    font-size: 24px;
+}
+
+.chevron{
+    display: inline-block;
+    vertical-align: top;
+    padding-top: 5px;
+    margin: 0px 10px;
+}
+
+.chevron .fa-chevron-up{
+    font-size: 12px;
+
+}
+
+.manage{
+    flex-grow: 1;
+    text-align: center;
+}
+
+.manage .chevron .fa-chevron-up{
+    padding-right: 5px;
+}
+
+.manage .icons .fa-share-from-square{
+    color: lime;
+}
+
+
+
+.close{
+    height: 100%;
+    padding: 20px;
+    background-color: #4A4A4A;
+    vertical-align: center;
+    color: red;
+
+}
+
+
+
+
+
+
 
