--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,7 @@ nav{
 
     width: 100%;
     height: 60px;
-    /* test */
-    /* padding-bottom: 8px; */
+
     background-color: #222222;
     color: white;
 
@@ -107,8 +106,6 @@ main .container .users{
 
     color: white;
 
-    /* border: 1px solid white; */
-    /* test */
 }
 
 .users img{
@@ -142,6 +139,11 @@ main .container .users{
     align-items: center;
     padding-left: 10px;
 
+}
+
+.options, .manage{
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 
